[package]
name = "af"
version = "0.1.0"
edition = "2021"
description = "Argumentation Frameworks"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["af"]
categories = ["logic", "argumentation"]

[dependencies]
yew = { version="0.20", features=["csr"] }
