[package]
name = "af"
version = "0.1.0"
edition = "2021"
description = "Argumentation Frameworks"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["af"]
categories = ["logic", "argumentation"]
homepage = "https://renpet-hhh.github.io/af/"

[dependencies]
yew = { version="0.21", features=["csr"] }
varisat = "0.2.2"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
petgraph = "0.6.4"
js-sys = "0.3.64"

[dependencies.web-sys]
version="0.3.64"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
]
